# minimus

./: .gitignore  README.md
api/: README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 320a6487ad19_.py  8e1e69bfef85_.py
api/app/: main.py
api/app/application/errors/: exceptions.py
api/app/infrastructure/logging/: __init__.py  logging.py
api/app/infrastructure/models/: __init__.py  test_demo.py
api/app/infrastructure/storage/: cos.py  postgres.py  redis.py
api/app/interfaces/endpoints/: routes.py  status_routes.py
api/app/interfaces/errors/: exception_handler.py
api/app/interfaces/schemas/: base.py
api/core/: config.py
